--- a/header.html
+++ b/header.html
@@ -21,7 +21,7 @@
     <body>
         <!-- header -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow " style="position:fixed; width:100%; z-index:1000;">
-            <a class="navbar-brand" href="/">REgify</a>
+            <a class="navbar-brand" href="/">RMS</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navContent" aria-controls="navContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -43,7 +43,7 @@
 
         <section class="jumbotron text-center shadow">
             <div class="container">
-                <h1 class="jumbotron-heading">REgify</h1>
+                <h1 class="jumbotron-heading">RMS Testsuite</h1>
                 <p class="lead text-muted">Regular expressions made simple</p>
                 <p>
                     <a href="/" class="btn btn-dark">Dashboard</a>
