--- a/api.html
+++ b/api.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="/">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/api">API Documentation</a>
+                        <a class="nav-link" href="/api.html">API Documentation</a>
                     </li>
                 </ul>
             </div>
