--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-        <script src="jquery.js"></script>
-        <script>
-        $(function(){
-          $("#header").load("header.html");
-        });
-        </script>
+        <link rel="stylesheet"
+              href="styles/stylesheet.css">
     </head>
     <body>
         <!-- header -->
@@ -31,7 +27,7 @@
                         <a class="nav-link" href="/">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/api">API Documentation</a>
+                        <a class="nav-link" href="/api.html">API Documentation</a>
                     </li>
                 </ul>
             </div>
@@ -39,10 +35,10 @@
 
           <!-- Content -->
 
-          <main role="main">
+        <main role="main">
 
         <section class="jumbotron text-center shadow">
-            <div class="container">
+            <div class="container padd">
                 <h1 class="jumbotron-heading">REgify</h1>
                 <p class="lead text-muted">Regular expressions made simple</p>
                 <p>
