safari keeps bugging...

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <p class="lead text-muted">Regular expressions made simple</p>
                 <p>
                     <a href="/" class="btn btn-dark">Dashboard</a>
-                    <a href="/regulations" class="btn btn-dark">API Documentation</a>
+                    <a href="/api.html" class="btn btn-dark">API Documentation</a>
                 </p>
             </div>
         </section>
