added word breaker

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat </p>
                                     </label>
                                     <button style="width:100%;" type="submit" class="btn btn-dark" name="btn"
-                                        value="Search" id="search">Go</button>
+                                        value="Search" id="search">Learn More</button>
                                 </div>
                             </div>
                         </div>
@@ -71,7 +71,7 @@
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat </p>
                                     </label>
                                     <button style="width:100%;" type="submit" class="btn btn-dark" name="btn"
-                                        value="Search" id="search">Go</button>
+                                        value="Search" id="search">Learn More</button>
                                 </div>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                                         <p>Lorem re eu fugiat </p>
                                     </label>
                                     <button style="width:100%;" type="submit" class="btn btn-dark" name="btn"
-                                        value="Search" id="search">Go</button>
+                                        value="Search" id="search">Learn More</button>
                                 </div>
                             </div>
                         </div>
