--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="utf-8">
         <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/default.css') }}">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -13,10 +12,13 @@
 
         <link rel="stylesheet"
               href="styles/stylesheet.css">
+        <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.18.1/build/highlight.min.js"></script>
+
     </head>
-    <body>
+
+    <body data-spy="scroll" data-offset="15" data-target="#myScrollspy">
         <!-- header -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow " style="position:fixed; width:100%; z-index:1000;">
+        <nav id="navbar" class="navbar navbar-expand-lg navbar-dark shadow " style="position:fixed; width:100%; z-index:1000;">
             <a class="navbar-brand" href="/">REgify</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navContent" aria-controls="navContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -24,73 +26,53 @@
             <div class="collapse navbar-collapse" id="navContent">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Dashboard</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="/api.html">API Documentation</a>
                     </li>
                 </ul>
             </div>
         </nav>
+    <main role="main">
+        <!-- Content -->
+        <div class="position-relative overflow-hidden p-3 p-md-5 text-center bg-light">
+          <div class="col-md-5 p-lg-5 mx-auto my-5">
+            <h1 class="display-4 font-weight-normal">REgify</h1>
+            <p class="lead font-weight-normal">Modernized way of writing regular expressions</p>
+            <a class="btn btn-outline-secondary" href="#">Download Now</a>
+          </div>
+          <div class="product-device shadow-sm d-none d-md-block"></div>
+          <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+        </div>
 
-          <!-- Content -->
-
-        <main role="main">
-
-        <section class="jumbotron text-center shadow">
-            <div class="container padd">
-                <h1 class="jumbotron-heading">REgify</h1>
-                <p class="lead text-muted">Regular expressions made simple</p>
-                <p>
-                    <a href="/" class="btn btn-dark">Dashboard</a>
-                    <a href="/api.html" class="btn btn-dark">API Documentation</a>
-                </p>
+        <div id="info-container">
+          <div id="info-board" class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+            <div class="my-3 py-3">
+              <h2 class="display-5">Design</h2>
+              <p class="lead">Our goal with this language was to provide a more conveniente way of writing regular expressions.
+                              With this language, you will get a more programmatically looking language with a simple yet powerfull syntax, increasing readability and mantainability of your future regular expressions! </p>
             </div>
-        </section>
-        <form method="post" name="post_data">
-            <div>
-                <div class="container" style="padding-top:30px">
-                    <div class="row">
-                        <div id="top3" class="col-md-4" style="margin-right: auto; margin-left: auto;">
-                            <div class="card mb-4 shadow-sm" style="height:100%">
-                                <div class="card-body">
-                                    <label style="height:85%">
-                                        <strong style="font-size: 16pt;">Readability</strong>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat </p>
-                                    </label>
-                                    <button style="width:100%;" type="submit" class="btn btn-dark" name="btn"
-                                        value="Search" id="search">Learn More</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div id="top3" class="col-md-4" style="margin-right: auto; margin-left: auto;">
-                            <div class="card mb-4 shadow-sm" style="height:100%">
-                                <div class="card-body">
-                                    <label style="height:85%">
-                                        <strong style="font-size: 16pt;">Maintainability</strong>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat </p>
-                                    </label>
-                                    <button style="width:100%;" type="submit" class="btn btn-dark" name="btn"
-                                        value="Search" id="search">Learn More</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div id="top3" class="col-md-4" style="margin-right: auto; margin-left: auto; ">
-                            <div class="card mb-4 shadow-sm" style="height:100%">
-                                <div class="card-body">
-                                    <label style="height:85%">
-                                        <strong style="font-size: 16pt;">Usability</strong>
-                                        <p>Lorem re eu fugiat </p>
-                                    </label>
-                                    <button style="width:100%;" type="submit" class="btn btn-dark" name="btn"
-                                        value="Search" id="search">Learn More</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+          </div>
+        </div>
+
+        <div id="info-container">
+          <div id="info-board" class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+            <div class="my-3 p-3">
+              <h2 class="display-5">Drop in replacement</h2>
+              <p class="lead">REgify is not built to replace the entire Regular expression library for Python, just the anicent syntax for writing the regular expressions</p>
             </div>
-        </form>
+            <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+          </div>
+        </div>
+        <div id="info-container">
+          <div id="info-board" class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+            <div class="my-3 p-3">
+              <h2 class="display-5">Drop in replacement</h2>
+              <p class="lead">REgify is not built to replace the entire Regular expression library for Python, just the anicent syntax for writing the regular expressions</p>
+            </div>
+            <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+          </div>
+        </div>
+
     </main>
 
     </body>
