--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <body data-spy="scroll" data-offset="15" data-target="#myScrollspy">
         <!-- header -->
-        <nav id="navbar" class="navbar navbar-expand-lg navbar-dark shadow " style="position:fixed; width:100%; z-index:1000;">
+        <nav id="navbar" class="navbar navbar-expand-md navbar-dark shadow " style="position:fixed; width:100%; z-index:1000;">
             <a class="navbar-brand" href="/">REgify</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navContent" aria-controls="navContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,19 +28,26 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/api.html">API Documentation</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/examples.html">Examples</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/aadamandersson/regify">Source Code</a>
+                    </li>
                 </ul>
             </div>
         </nav>
     <main role="main">
         <!-- Content -->
-        <div class="position-relative overflow-hidden p-3 p-md-5 text-center bg-light">
-          <div class="col-md-5 p-lg-5 mx-auto my-5">
-            <h1 class="display-4 font-weight-normal">REgify</h1>
-            <p class="lead font-weight-normal">Modernized way of writing regular expressions</p>
-            <a class="btn btn-outline-secondary" href="#">Download Now</a>
-          </div>
-          <div class="product-device shadow-sm d-none d-md-block"></div>
-          <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+        <div id="info-container">
+            <div id="jumbo-board" class="position-relative overflow-hidden p-3 p-md-5 text-center ">
+              <div class="col-md-5 p-lg-5 mx-auto my-5">
+                <h1 class="display-4 font-weight-normal">REgify</h1>
+                <p class="lead font-weight-normal">Modernized way of writing regular expressions</p>
+                <a class="btn btn-outline-secondary" href="/api">Get started</a>
+                <a class="btn btn-outline-secondary" href="https://github.com/aadamandersson/regify">Explore on GitHub</a>
+              </div>
+            </div>
         </div>
 
         <div id="info-container">
