--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
         </div>
 
         <div id="info-container">
-          <div id="info-board" class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+          <div id="info-board dip" class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
             <div class="my-3 p-3">
               <h2 class="display-5">Drop in replacement</h2>
               <p class="lead">REgify is not built to replace the entire Regular expression library for Python, just the anicent syntax for writing the regular expressions</p>
             </div>
-            <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+            <img src="styles/img/dip.png" id="dip" style="border-radius: 21px 21px 0 0;">
           </div>
         </div>
         <div id="info-container">
