--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             <div class="my-3 py-3">
               <h2 class="display-5">Design</h2>
               <p class="lead">Our goal with this language was to provide a more convenient way of writing regular expressions.
-                              With this language, you will get a more programmatically looking language with a simple yet powerfull syntax, 
+                              With this language, you will get a more programmatically looking language with a simple yet powerfull syntax,
                               increasing readability and mantainability of your future regular expressions! </p>
             </div>
-            <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+            <img src="styles/img/design.png" id="imgs" style="border-radius: 21px 21px 0 0;">
           </div>
         </div>
 
@@ -66,24 +66,19 @@
           <div id="info-board" class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
             <div class="my-3 p-3">
               <h2 class="display-5">Drop in replacement</h2>
-<<<<<<< Updated upstream
               <p class="lead">REgify is not built to replace the entire Regular expression library for Python, just the anicent syntax for writing them!</p>
-=======
-              <p class="lead">REgify is not built to replace the entire Regular expression library for Python, 
-                              just the anicent syntax for writing the regular expressions</p>
->>>>>>> Stashed changes
             </div>
-            <img src="styles/img/dip.png" id="dip" style="border-radius: 21px 21px 0 0;">
+            <img src="styles/img/dip.png" id="imgs" style="border-radius: 21px 21px 0 0;">
           </div>
         </div>
         <div id="info-container">
           <div id="info-board" class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
             <div class="my-3 p-3">
               <h2 class="display-5">Drop in replacement</h2>
-              <p class="lead">REgify is not built to replace the entire Regular expression library for Python, 
+              <p class="lead">REgify is not built to replace the entire Regular expression library for Python,
                               just the anicent syntax of writing the regular expressions</p>
             </div>
-            <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+            <img src="styles/img/dip.png" id="imgs" style="border-radius: 21px 21px 0 0;">
           </div>
         </div>
 
