added ipv6 on front page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                               With this language, you will get a more programmatically looking language with a simple yet powerfull syntax,
                               increasing readability and mantainability of your future regular expressions! </p>
             </div>
-            <img src="styles/img/design.png" id="imgs" style="border-radius: 21px 21px 0 0;">
+            <img src="styles/img/ipv6.png" id="imgs" style="border-radius: 21px 21px 0 0;">
           </div>
         </div>
 
