--- a/index.html
+++ b/index.html
@@ -83,11 +83,16 @@
         </div>
 
     </main>
-      <div class="footer-copyright">
-        <div class="container">
-            &copy; Copyright 2020 REgify
-          <a class="grey-text text-lighten-4 right"</a>
-        </div>
+
+    <!-- Footer -->
+    <footer class="page-footer font-small">
+      <!-- Footer Elements -->
+
+      <!-- Copyright -->
+      <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        <a href="https://regify.github.io">REgify</a>
       </div>
-    </body>
+      <!-- Copyright -->
+    </footer>
+<!-- Footer -->
 </html>
