--- a/api.html
+++ b/api.html
@@ -17,7 +17,7 @@
 
     <body data-spy="scroll" data-offset="15" data-target="#myScrollspy">
         <!-- header -->
-        <nav id="navbar" class="navbar navbar-expand-lg navbar-dark shadow " style="position:fixed; width:100%; z-index:1000;">
+        <nav id="navbar" class="navbar navbar-expand-md navbar-dark shadow " style="position:fixed; width:100%; z-index:1000;">
             <a class="navbar-brand" href="/">REgify</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navContent" aria-controls="navContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,6 +26,12 @@
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="/api.html">API Documentation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/examples.html">Examples</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/aadamandersson/regify">Source Code</a>
                     </li>
                 </ul>
             </div>
@@ -199,50 +205,14 @@
     </div>
     </body>
     <!-- Footer -->
-<footer class="page-footer font-small special-color-dark pt-4">
+    <footer class="page-footer font-small">
+      <!-- Footer Elements -->
 
-  <!-- Footer Elements -->
-  <div class="container">
-
-    <!-- Social buttons -->
-    <ul class="list-unstyled list-inline text-center">
-      <li class="list-inline-item">
-        <a class="btn-floating btn-fb mx-1">
-          <i class="fab fa-facebook-f"> </i>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-tw mx-1">
-          <i class="fab fa-twitter"> </i>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-gplus mx-1">
-          <i class="fab fa-google-plus-g"> </i>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-li mx-1">
-          <i class="fab fa-linkedin-in"> </i>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-dribbble mx-1">
-          <i class="fab fa-dribbble"> </i>
-        </a>
-      </li>
-    </ul>
-    <!-- Social buttons -->
-
-  </div>
-  <!-- Footer Elements -->
-
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://regify.github.io"> Adam Andersson & Ludwig Hansson</a>
-  </div>
-  <!-- Copyright -->
-
-</footer>
+      <!-- Copyright -->
+      <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        <a href="https://regify.github.io">REgify</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
 <!-- Footer -->
 </html>
