hotfixed some spelling issues

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <div class="my-3 py-3">
               <h2 class="display-5">Design</h2>
               <p class="lead">Our goal with this language was to provide a more convenient way of writing regular expressions.
-                              With this language, you will get a more programmatically looking language with a simple yet powerfull syntax,
-                              increasing readability and mantainability of your future regular expressions! </p>
+                              With REgify you will get a more programmatically looking language with a simple, yet powerfull syntax,
+                              which were developed with readability, usability and mantainability in mind! </p>
             </div>
             <img src="styles/img/ipv6.png" id="imgs" style="border-radius: 21px 21px 0 0;">
           </div>
@@ -66,7 +66,7 @@
           <div id="info-board" class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
             <div class="my-3 p-3">
               <h2 class="display-5">Drop in replacement</h2>
-              <p class="lead">REgify is not built to replace the entire Regular expression library for Python, just the anicent syntax for writing them!</p>
+              <p class="lead">REgify is not built to replace the entire regular expression library for Python, just the anicent syntax for writing them!</p>
             </div>
             <img src="styles/img/dip.png" id="imgs" style="border-radius: 21px 21px 0 0;">
           </div>
@@ -74,9 +74,8 @@
         <div id="info-container">
           <div id="info-board" class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
             <div class="my-3 p-3">
-              <h2 class="display-5">Drop in replacement</h2>
-              <p class="lead">REgify is not built to replace the entire Regular expression library for Python,
-                              just the anicent syntax of writing the regular expressions</p>
+              <h2 class="display-5">Title</h2>
+              <p class="lead">Description</p>
             </div>
             <img src="styles/img/dip.png" id="imgs" style="border-radius: 21px 21px 0 0;">
           </div>
