Updated VARCHAR in api documentation for matching n or MORE

--- a/api.html
+++ b/api.html
@@ -110,7 +110,7 @@
                             that contains of "two or more" characters, you do this by writing
                         </p>
                         <div class="coding bg-dark ">
-                            <code>VARCHAR("A-Z", 2, *)</code>
+                            <code>VARCHAR("A-Z", 2, MORE)</code>
                         </div>
                         <br>
                     </div>
@@ -197,7 +197,7 @@
                             that contains of "two or more" characters, you do this by writing
                         </p>
                         <div class="coding bg-dark ">
-                            <code>VARCHAR("A-Z", 2, *)</code>
+                            <code>VARCHAR("A-Z", 2, MORE)</code>
                         </div>
                         <br>
                     </div>
