Changed in text from * to the keyword MORE

--- a/api.html
+++ b/api.html
@@ -103,8 +103,8 @@
                         </div>
                         <br>
                         <strong>Matching characters with no upper limit</strong>
-                        <p>A lot of times you have to match patterns where you don't know the upper limit, then you can provide an asterix
-                            <span class="inline-code bg-dark "><code>*</code></span>
+                        <p>A lot of times you have to match patterns where you don't know the upper limit, then you can provide the keyword
+                            <span class="inline-code bg-dark "><code>MORE</code></span>
                             as the second argument, e.g. if you want to match all patterns with
                             <span class="inline-code bg-dark "><code>"A-Z"</code></span>
                             that contains of "two or more" characters, you do this by writing
@@ -190,8 +190,8 @@
                             GROUP takes from 1 to N amount of arguments which are separated by a comma.
                         </p>
                         <strong>Creating a GROUP</strong>
-                        <p>A lot of times you have to match patterns where you don't know the upper limit, then you can provide an asterix
-                            <span class="inline-code bg-dark "><code>*</code></span>
+                        <p>A lot of times you have to match patterns where you don't know the upper limit, then you can provide the keyword
+                            <span class="inline-code bg-dark "><code>MORE</code></span>
                             as the second argument, e.g. if you want to match all patterns with
                             <span class="inline-code bg-dark "><code>"A-Z"</code></span>
                             that contains of "two or more" characters, you do this by writing
