Updated bg color for code in END

--- a/api.html
+++ b/api.html
@@ -277,13 +277,17 @@
                         <p>
 							In case you want to match the end of the string or just before the newline at the end of a string. END is the keyword you want to use.
 							For example:
-							<code>
-								@"foo"
-							</code>
+							<div class="coding bg-dark">
+								<code>
+									@"foo"
+								</code>
+							</div>
 							matches both 'foo' and 'foobar' while
-							<code>
-								@"foo" END
-							</code>
+							<div class="coding bg-dark">
+								<code>
+									@"foo" END
+								</code>
+							</div>
 							matches only 'foo'.
                         </p>
                     </div>
