--- a/api.html
+++ b/api.html
@@ -275,20 +275,21 @@
                         </div>
                         <p><h5>Description</h5></p>
                         <p>
-							In case you want to match the end of the string or just before the newline at the end of a string. END is the keyword you want to use.
+							In case you want to match the end of the string or just before the newline at the end of a string, END is the keyword you want to use.
 							For example:
 							<div class="coding bg-dark">
 								<code>
 									@"foo"
 								</code>
 							</div>
-							matches both 'foo' and 'foobar' while
+							matches both 'foo' and 'foobar', while the following
+							<br><br>
 							<div class="coding bg-dark">
 								<code>
 									@"foo" END
 								</code>
 							</div>
-							matches only 'foo'.
+							only matches 'foo'.
                         </p>
                     </div>
                     <hr>
