--- a/api.html
+++ b/api.html
@@ -305,7 +305,7 @@
                         <p><h5>Description</h5></p>
                         <p>
                             In case you want to match anything until e.g, a specific word this keyword could be used.<br>
-                            <b>Note: </b>Since the keyword is greedy it will match anything until the last occurrence of the word.
+                            <b>Note: </b>Since the keyword is greedy it will match anything until the last occurrence of the word. For example:
 							<div class="coding bg-dark">
 								<code>
 									UNTIL @"foo"
